--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.9.1",
     "express": "^4.13.4",
+    "firebase": "^3.0.2",
+    "lodash": "^4.17.3",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
